--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=5005
 ORIGIN=http://localhost:3000
-SERVER_URL= https://animeprojectserver.onrender.com
+SERVER_URL= https://anime.adaptable.app
 SECRET_TOKEN= "animeToken"
