--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PORT=5005
 ORIGIN=http://localhost:3000
-VITE_SERVER_URL= https://anime.adaptable.app
+# VITE_SERVER_URL= https://anime.adaptable.app
+VITE_SERVER_URL= http://localhost:5005
 SECRET_TOKEN= "animeToken"
